--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,9 +2,9 @@ name: GitHub Actions
 
 on:
   - pull_request
-  - push
-    branches:
-      - master
+  - push:
+      branches:
+        - master
 
 jobs:
   build:
