--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,10 +1,10 @@
 name: GitHub Actions
 
 on:
-  - pull_request
-  - push:
+  push:
       branches:
         - master
+  pull_request
 
 jobs:
   build:
